chore: clarifications and code cleanup

--- a/Morning Calls.ipynb
+++ b/Morning Calls.ipynb
@@ -5,17 +5,15 @@
    "id": "531f5230",
    "metadata": {},
    "source": [
-    "# <u>SCRIPT PARA RODAR MORNING CALLS DIÁRIAS</u> \n",
+    "# <u>GERADOR MORNING CALLS</u> \n",
+    "\n",
+    "O programa é uma exploração inicial da API da OpenAI. A ideia é gerar um morning call do mercado através de demais fontes\n",
     "\n",
     "#### O que o programa faz:\n",
     "1. Acessa o conteúdo das morning calls da Órama e XP;\n",
     "2. Resume separadamente cada morning call;\n",
     "3. Usa o ChatGPT para criar um texto no formato de morning call baseado nos tópicos;\n",
-    "4. Separa o texto no contexto do Brasil e exterior e exclui parágrafos não relevantes.\n",
-    "\n",
-    "**O projeto como um todo ainda é WIP, o resultado final ainda precisa ser modificado para se tornar próprio para enviar!**\n",
-    "\n",
-    "**Alguns dados são divulgados depois que as fontes divulgam o morning call, nestes casos é necessário pesquisar manualmente sobre estes dados e pode ser inputados na função \"one_paragraph_summary\" que resume em um parágrafo**"
+    "4. Separa o texto no contexto do Brasil e exterior e exclui parágrafos não relevantes."
    ]
   },
   {
@@ -25,9 +23,10 @@
    "source": [
     "Pontos de atenção:\n",
     "\n",
-    "* Necessário modificar a chave do openai toda vez que o período de free trial acabar (precisa de nova conta, ou assinar o plano) para pagar;\n",
     "* O ChatGPT limita cada completion por um número de tokens (acho que 4000, somando perguntas e respostas). Até então este valor nunca foi ultrapassado, provavelmente algo maior que isso é até muita coisa para ler de qualquer forma;\n",
-    "* O ChatGPT limita o número de completions em 3 por minuto, então caso rode mais que isso ele da um erro, é só esperar um tempo e rodar novamente."
+    "* O ChatGPT limita o número de completions em 3 por minuto, então caso rode mais que isso ele da um erro, é só esperar um tempo e rodar novamente.\n",
+    "* Os resultados ainda estão longe de automatizados, são necessários muitos ajustes manuais de classificação de Brasil/externo e coerência.\n",
+    "* Alguns dados são divulgados depois que as fontes divulgam o morning call. Nestes casos é necessário pesquisar manualmente sobre a divulgação e pode ser inputados na função \"one_paragraph_summary\" que resume em um parágrafo."
    ]
   },
   {
@@ -35,7 +34,7 @@
    "id": "e706016f",
    "metadata": {},
    "source": [
-    "# 0. Import Libraries"
+    "# 0. Import Libraries and Preparation"
    ]
   },
   {
@@ -45,10 +44,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "03/20/2024\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'keyboard'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m \n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mlocale\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mkeyboard\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyautogui\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfeedparser\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'keyboard'"
      ]
     }
    ],
@@ -73,26 +76,16 @@
     "## OpenAI Data\n",
     "import openai\n",
     "\n",
-    "#openai.api_key = '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' # Key do OpenAI (vence em Nov/2023)\n",
-    "openai.api_key = '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'\n",
+    "openai.api_key = 'YOUR OPENAI KEY'\n",
     "\n",
     "## Date\n",
     "today = datetime.today().strftime('%m/%d/%Y')\n",
-    "print(today)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c044698d",
-   "metadata": {},
-   "source": [
-    "# 1. Get Today's Morning Call"
+    "print(today)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e2385c7e",
    "metadata": {},
    "outputs": [],
@@ -109,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fbec84be",
    "metadata": {},
    "outputs": [],
@@ -143,94 +136,32 @@
    "id": "bf594a98",
    "metadata": {},
    "source": [
-    "## 1.1. Órama"
+    "## 1. Getting Morning Call Sources"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1d22484f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "link_orama = 'https://analise.orama.com.br/panorama-diario-3/'\n",
-    "\n",
     "## Extract Órama Morning Call\n",
-    "MC_orama = newspaper_text_extraction(link_orama)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "cf88e7f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://analise.orama.com.br/panorama-diario-3/\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(link_orama)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d6506668",
-   "metadata": {},
-   "source": [
-    "## 1.2. XP"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ffe40190",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "link_orama = 'https://analise.orama.com.br/panorama-diario-3/'\n",
+    "MC_orama = newspaper_text_extraction(link_orama)\n",
+    "\n",
+    "\n",
+    "## Extract XP Morning Call\n",
     "link_xp_base = 'https://conteudos.xpi.com.br/morning-call/'\n",
     "headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/115.0.0.0 Safari/537.36'}\n",
     "\n",
     "request = requests.get(link_xp_base, headers=headers)\n",
-    "soup = BeautifulSoup(request.content, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "b0465b2f",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "soup = BeautifulSoup(request.content, 'html.parser')\n",
+    "\n",
     "link_xp = soup.find('a', class_='bloco-materia box-rounded')['href']\n",
-    "#link_xp = r'https://conteudos.xpi.com.br/morning-call/bolsas-em-queda-alta-dos-juros-dos-titulos-do-tesouro-dos-eua-eleicao-na-argentina-e-resultados-no-radar/'\n",
     "\n",
     "MC_xp = newspaper_text_extraction(link_xp)\n",
     "MC_xp = MC_xp.split('\\n\\nEmpresas')[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "9e31e23a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://conteudos.xpi.com.br/morning-call/mercados-atentos-as-decisoes-monetarias-no-brasil-e-eua-nesta-super-quarta-feira/\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(link_xp)"
    ]
   },
   {
@@ -243,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1a2af154",
    "metadata": {},
    "outputs": [],
@@ -275,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "5d9e01b5",
    "metadata": {},
    "outputs": [],
@@ -293,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "064dc8d8",
    "metadata": {
     "scrolled": false
@@ -313,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "66505a68",
    "metadata": {},
    "outputs": [],
@@ -331,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "eedfd2d7",
    "metadata": {
     "scrolled": false
@@ -353,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "628848f1",
    "metadata": {},
    "outputs": [],
@@ -372,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "1c977fd9",
    "metadata": {},
    "outputs": [
@@ -408,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "dc8a4e24",
    "metadata": {},
    "outputs": [
@@ -441,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3b8e26bf",
    "metadata": {},
    "outputs": [],
@@ -469,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "1325c441",
    "metadata": {},
    "outputs": [],
@@ -488,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "cc278842",
    "metadata": {
     "scrolled": false
@@ -533,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
