chore: cleanup and clarification

--- a/Morning Calls.ipynb
+++ b/Morning Calls.ipynb
@@ -39,43 +39,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ce630ac6",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'keyboard'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m \n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mlocale\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mkeyboard\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyautogui\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfeedparser\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'keyboard'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "import time \n",
-    "import locale\n",
-    "import keyboard\n",
-    "import pyautogui\n",
-    "import feedparser\n",
-    "import clipboard\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import yfinance as yf\n",
     "import requests\n",
     "\n",
     "from tqdm import tqdm\n",
     "from bs4 import BeautifulSoup\n",
-    "from datetime import datetime, timedelta\n",
+    "from datetime import datetime,\n",
     "from newspaper import Article\n",
     "\n",
     "## OpenAI Data\n",
     "import openai\n",
-    "\n",
     "openai.api_key = 'YOUR OPENAI KEY'\n",
     "\n",
     "## Date\n",
@@ -197,14 +176,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5e75a978",
-   "metadata": {},
-   "source": [
-    "## 2.1. This Morning"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5d9e01b5",
@@ -219,26 +190,8 @@
     "                                                                 resumo comentando sobre o cenário de forma completa'}])\n",
     "\n",
     "summary_orama = completion['choices'][0]['message']['content']\n",
-    "time.sleep(30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "064dc8d8",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O cenário econômico e político observado nesta manhã está fortemente influenciado por eventos como as decisões de política monetária nos Estados Unidos e no Brasil. Enquanto se aguarda um possível recuo de 50 bps na taxa básica de juros pelo Banco Central do Brasil, as expectativas para o Fed dos EUA são de manutenção. Nas bolsas, a Ásia fechou majoritariamente em alta, impulsionada pela manutenção das taxas de juros na China e à espera do anúncio do Fed. Já na Europa, as bolsas operam sem direção única, influenciadas por quedas no setor de luxo e aguardando a decisão do Fed. No mercado de commodities, o rendimento do T-Note de 10 anos está em 4,28%, os contratos futuros do Brent recuam e o ouro também apresenta queda. O Bitcoin é negociado em alta. Nos EUA, eventos importantes incluem os estoques de Petróleo Bruto, a decisão de política monetária do FOMC e a coletiva de imprensa do FOMC, enquanto no Brasil destaca-se a decisão do COPOM. No mercado brasileiro, o Ibovespa avançou impulsionado por papéis ligados ao minério de ferro, mesmo com a cautela dos investidores diante das decisões políticas nos dois países. Os juros futuros e o dólar tiveram movimentações diferentes ao longo do dia. Internamente, o Relatório Focus do Banco Central aponta ajustes nas projeções para inflação, PIB e câmbio. Além disso, notícias políticas envolvendo regulamentação da reforma tributária e a PF indiciando o ex-presidente Jair Bolsonaro impactam o cenário. No geral, o cenário é marcado pela expectativa em torno das decisões de política monetária e por eventos políticos relevantes tanto no Brasil quanto no exterior.\n"
-     ]
-    }
-   ],
-   "source": [
+    "time.sleep(30)\n",
+    "\n",
     "print(summary_orama)"
    ]
   },
@@ -257,28 +210,8 @@
     "                                                                 resumo comentando sobre o cenário de forma completa'}])\n",
     "\n",
     "summary_xp = completion['choices'][0]['message']['content']\n",
-    "time.sleep(30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eedfd2d7",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Resumo:\n",
-      "\n",
-      "No cenário financeiro recente, o Ibovespa fechou com leve alta impulsionado por commodities, enquanto a Embraer teve destaque positivo e a Magalu registrou desempenho negativo. As taxas futuras de juros tiveram queda, alinhadas com os Treasuries dos EUA, enquanto os mercados globais apresentaram variações mistas. Na economia, o PBoC manteve taxas de juros na China, os EUA viram uma forte recuperação na construção de casas e no Brasil, as expectativas de inflação para 2024 e 2025 estão acima da meta. Na Super Quarta-feira, o FOMC deve manter as taxas de juros nos EUA, com possibilidade de cortes a partir de julho. No Brasil, espera-se que o Copom reduza a taxa Selic em 50 pontos-base, refletindo a dinâmica da inflação e a atividade econômica mais forte. Os riscos de curto prazo estão inclinados para cima, com projeções de cortes adicionais nas taxas de juros até atingir 9,0%.\n"
-     ]
-    }
-   ],
-   "source": [
+    "time.sleep(30)\n",
+    "\n",
     "print(summary_xp)"
    ]
   },
@@ -298,42 +231,8 @@
     "                                                                 o cenário de forma completa'}])\n",
     "\n",
     "todays_text = completion['choices'][0]['message']['content']\n",
-    "time.sleep(15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c977fd9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prezado cliente,\n",
-      "\n",
-      "Espero que esteja bem. Gostaria de abordar o atual cenário econômico e político que tem impactado os mercados financeiros recentemente. \n",
-      "\n",
-      "Observamos que as decisões de política monetária tanto nos Estados Unidos quanto no Brasil têm sido um ponto central de atenção para investidores e analistas. Enquanto aguardamos possíveis movimentos de redução na taxa básica de juros pelo Banco Central do Brasil, as expectativas em relação ao Fed dos EUA apontam para a manutenção das taxas. Esses eventos têm gerado impactos nas bolsas de valores ao redor do mundo, com a Ásia fechando majoritariamente em alta, impulsionada pela estabilidade das taxas de juros na China e pela expectativa em relação ao anúncio do Fed.\n",
-      "\n",
-      "Na Europa, as bolsas operam sem uma direção clara, influenciadas por quedas no setor de luxo e também aguardando a decisão do Fed. No mercado de commodities, observamos movimentações interessantes, como o rendimento do T-Note de 10 anos em 4,28%, a queda nos contratos futuros do Brent e no preço do ouro. O Bitcoin, por sua vez, tem apresentado um desempenho positivo.\n",
-      "\n",
-      "Eventos importantes nos EUA incluem os estoques de Petróleo Bruto, a decisão de política monetária do FOMC e a coletiva de imprensa do FOMC, enquanto no Brasil destaca-se a decisão do COPOM. Internamente, o Relatório Focus do Banco Central indicou ajustes nas projeções para inflação, PIB e câmbio, refletindo a dinâmica da economia brasileira. Além disso, notícias políticas, como a regulamentação da reforma tributária e o indiciamento do ex-presidente Jair Bolsonaro pela PF, têm impactado o cenário.\n",
-      "\n",
-      "No mercado brasileiro, o Ibovespa avançou impulsionado por papéis ligados ao minério de ferro, apesar da cautela dos investidores diante das decisões políticas nos dois países. As movimentações nos juros futuros e no dólar foram distintas ao longo do dia, indicando uma certa volatilidade nos mercados.\n",
-      "\n",
-      "Diante desse panorama, é importante ressaltar que os riscos de curto prazo parecem estar inclinados para cima, com projeções de possíveis cortes adicionais nas taxas de juros até atingirem o patamar de 9,0%. É fundamental estar atento às decisões de política monetária e aos desdobramentos políticos tanto no Brasil quanto no exterior, a fim de tomar decisões de investimento fundamentadas e alinhadas com o contexto atual.\n",
-      "\n",
-      "Estamos à disposição para discutir mais detalhes e ajustar nossa estratégia de investimento conforme necessário. Contem conosco para orientá-los da melhor forma possível neste ambiente desafiador.\n",
-      "\n",
-      "Atenciosamente,\n",
-      "[Seu Nome]\n",
-      "Asset Manager e Investment Advisor\n"
-     ]
-    }
-   ],
-   "source": [
+    "time.sleep(10)\n",
+    "\n",
     "print(todays_text)"
    ]
   },
@@ -342,21 +241,7 @@
    "execution_count": null,
    "id": "dc8a4e24",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Observamos que as decisões de política monetária tanto nos Estados Unidos quanto no Brasil têm sido um ponto central de atenção para investidores e analistas. Enquanto aguardamos possíveis movimentos de redução na taxa básica de juros pelo Banco Central do Brasil, as expectativas em relação ao Fed dos EUA apontam para a manutenção das taxas. Esses eventos têm gerado impactos nas bolsas de valores ao redor do mundo, com a Ásia fechando majoritariamente em alta, impulsionada pela estabilidade das taxas de juros na China e pela expectativa em relação ao anúncio do Fed.\n",
-      "\n",
-      "Na Europa, as bolsas operam sem uma direção clara, influenciadas por quedas no setor de luxo e também aguardando a decisão do Fed. No mercado de commodities, observamos movimentações interessantes, como o rendimento do T-Note de 10 anos em 4,28%, a queda nos contratos futuros do Brent e no preço do ouro. O Bitcoin, por sua vez, tem apresentado um desempenho positivo.\n",
-      "\n",
-      "Eventos importantes nos EUA incluem os estoques de Petróleo Bruto, a decisão de política monetária do FOMC e a coletiva de imprensa do FOMC, enquanto no Brasil destaca-se a decisão do COPOM. Internamente, o Relatório Focus do Banco Central indicou ajustes nas projeções para inflação, PIB e câmbio, refletindo a dinâmica da economia brasileira. Além disso, notícias políticas, como a regulamentação da reforma tributária e o indiciamento do ex-presidente Jair Bolsonaro pela PF, têm impactado o cenário.\n",
-      "\n",
-      "No mercado brasileiro, o Ibovespa avançou impulsionado por papéis ligados ao minério de ferro, apesar da cautela dos investidores diante das decisões políticas nos dois países. As movimentações nos juros futuros e no dólar foram distintas ao longo do dia, indicando uma certa volatilidade nos mercados.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "todays = extract_interest_topics(todays_text, [], 2, -3)\n",
     "print(todays)"
@@ -414,36 +299,10 @@
     "globe = '\\U0001F310'\n",
     "\n",
     "BR_text = '\\n\\n'.join([BR_flag + ' ' + topic for topic in BR_topics])\n",
-    "EX_text = '\\n\\n'.join([globe  + ' ' + topic for topic in EX_topics])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc278842",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*Destaques do dia*\n",
-      "\n",
-      "🇧🇷 Observamos que as decisões de política monetária tanto nos Estados Unidos quanto no Brasil têm sido um ponto central de atenção para investidores e analistas. Enquanto aguardamos possíveis movimentos de redução na taxa básica de juros pelo Banco Central do Brasil, as expectativas em relação ao Fed dos EUA apontam para a manutenção das taxas. Esses eventos têm gerado impactos nas bolsas de valores ao redor do mundo, com a Ásia fechando majoritariamente em alta, impulsionada pela estabilidade das taxas de juros na China e pela expectativa em relação ao anúncio do Fed.\n",
-      "\n",
-      "🇧🇷 Eventos importantes nos EUA incluem os estoques de Petróleo Bruto, a decisão de política monetária do FOMC e a coletiva de imprensa do FOMC, enquanto no Brasil destaca-se a decisão do COPOM. Internamente, o Relatório Focus do Banco Central indicou ajustes nas projeções para inflação, PIB e câmbio, refletindo a dinâmica da economia brasileira. Além disso, notícias políticas, como a regulamentação da reforma tributária e o indiciamento do ex-presidente Jair Bolsonaro pela PF, têm impactado o cenário.\n",
-      "\n",
-      "🇧🇷 No mercado brasileiro, o Ibovespa avançou impulsionado por papéis ligados ao minério de ferro, apesar da cautela dos investidores diante das decisões políticas nos dois países. As movimentações nos juros futuros e no dólar foram distintas ao longo do dia, indicando uma certa volatilidade nos mercados.\n",
-      "\n",
-      "🌐 Na Europa, as bolsas operam sem uma direção clara, influenciadas por quedas no setor de luxo e também aguardando a decisão do Fed. No mercado de commodities, observamos movimentações interessantes, como o rendimento do T-Note de 10 anos em 4,28%, a queda nos contratos futuros do Brent e no preço do ouro. O Bitcoin, por sua vez, tem apresentado um desempenho positivo.\n"
-     ]
-    }
-   ],
-   "source": [
-    "MC = '*Destaques do dia*\\n\\n' + BR_text + '\\n\\n' + EX_text\n",
+    "EX_text = '\\n\\n'.join([globe  + ' ' + topic for topic in EX_topics])\n",
     "\n",
+    "# Output text\n",
+    "MC = '*Destaques do dia*\\n\\n' + BR_text + '\\n\\n' + EX_text\n",
     "print(MC)"
    ]
   }
