--- a/Boletim Focus.ipynb
+++ b/Boletim Focus.ipynb
@@ -43,13 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "16c9e791",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import openpyxl\n",
     "import locale\n",
     "import PyPDF2\n",
     "import requests\n",
@@ -67,32 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "cf4c7021",
+   "execution_count": null,
+   "id": "d1fea69a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20240610\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## Paths\n",
-    "base_path = r'Grupo GCB\\GCB CAPITAL - Investimentos\\GCB Capital1\\\\'\n",
-    "# base_path = r'Grupo GCB\\GCB CAPITAL - Documentos\\Investimentos\\GCB Capital1\\\\'\n",
-    "\n",
-    "backoffice_path = os.path.join(os.path.expanduser(\"~\"), base_path + r\"Backoffice\\\\\")\n",
-    "\n",
-    "image_path = os.path.join(os.path.expanduser(\"~\"), backoffice_path + r\"Conteudo_Divulgacao\\Templates\\\\\")\n",
-    "saving_path = os.path.join(os.path.expanduser(\"~\"), backoffice_path + r\"Conteudo_Divulgacao\\Imagens\\\\\")\n",
-    "\n",
-    "## Set Locale\n",
     "locale.setlocale(locale.LC_ALL, 'pt_BR')\n",
     "\n",
-    "## Day\n",
+    "## Today\n",
     "today = datetime.today().strftime('%Y%m%d')\n",
     "\n",
     "curr_year = datetime.today().year\n",
@@ -105,12 +86,12 @@
    "id": "60d0b886",
    "metadata": {},
    "source": [
-    "# 1. Collect Focus Data"
+    "# 1. Collecting Focus Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c66c6332",
    "metadata": {},
    "outputs": [],
@@ -119,10 +100,10 @@
     "    today = datetime.today()\n",
     "    today_weekday = today.weekday()  # Monday is 0, Sunday is 6\n",
     "    \n",
-    "    # Calculate the number of days to subtract to get to the last Friday (weekday 4)\n",
+    "    ## Calculating the number of days to subtract to get to the last Friday (weekday 4)\n",
     "    days_difference = today_weekday - 4 if today_weekday >= 4 else today_weekday + 3\n",
     "\n",
-    "    # Subtract the calculated days to get the date of the last Friday\n",
+    "    ## Subtracting the calculated days to get the date of the last Friday\n",
     "    last_friday = today - timedelta(days=days_difference)\n",
     "\n",
     "    return last_friday"
@@ -130,45 +111,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e63a6818",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'C:\\\\Users\\\\andre.huang\\\\Grupo GCB\\\\GCB CAPITAL - Investimentos\\\\GCB Capital1\\\\Backoffice\\\\Conteudo_Divulgacao\\\\Focus Reports\\\\R20240607.pdf'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12348\\3967757664.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[1;31m# Save the PDF content to the download path\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdownload_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"wb\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m         \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:\\\\Users\\\\andre.huang\\\\Grupo GCB\\\\GCB CAPITAL - Investimentos\\\\GCB Capital1\\\\Backoffice\\\\Conteudo_Divulgacao\\\\Focus Reports\\\\R20240607.pdf'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Set the URL of the PDF\n",
+    "## Setting the download path\n",
+    "download_directory = os.path.join(os.path.expanduser('~'), 'Documents')\n",
+    "\n",
+    "## Setting the URL of the PDF\n",
     "last_friday = get_last_friday().strftime('%Y%m%d')\n",
-    "# last_friday = get_last_friday().strftime('20240328')\n",
     "pdf_url = f'https://www.bcb.gov.br/content/focus/focus/R{last_friday}.pdf'\n",
-    "\n",
-    "# Set the download directory\n",
-    "# download_directory = r\"C:\\Users\\LeonardoDrabikBaranM\\Grupo GCB\\GCB CAPITAL - Investimentos\\GCB Capital1\\Backoffice\\Conteudo_Divulgacao\\Focus Reports\"\n",
-    "download_directory = r\"C:\\Users\\andre.huang\\Grupo GCB\\GCB CAPITAL - Investimentos\\GCB Capital1\\Backoffice\\Conteudo_Divulgacao\\Focus Reports\"\n",
-    "#download_directory = r\"C:\\Users\\LeonardoDrabikBaranM\\Grupo GCB\\GCB CAPITAL - Investimentos\\GCB Capital1\\Backoffice\\Conteudo_Divulgacao\\Focus Reports\"\n",
-    "\n",
-    "# Send a GET request to the PDF URL\n",
     "response = requests.get(pdf_url)\n",
     "\n",
-    "# Check if the request was successful\n",
+    "## Checking if successful\n",
     "if response.status_code == 200:\n",
-    "    # Extract the file name from the URL\n",
     "    file_name = os.path.basename(pdf_url)\n",
-    "    \n",
-    "    # Construct the download path\n",
     "    download_path = os.path.join(download_directory, file_name)\n",
     "    \n",
-    "    # Save the PDF content to the download path\n",
+    "    ## Saving the PDF content\n",
     "    with open(download_path, \"wb\") as f:\n",
     "        f.write(response.content)\n",
     "    \n",
@@ -185,16 +146,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Open the PDF file\n",
+    "## Reading the PDF file\n",
     "with open(download_path, \"rb\") as pdf_file:\n",
-    "    # Create a PDF reader object\n",
+    "    ## PDF reader\n",
     "    pdf_reader = PyPDF2.PdfReader(pdf_file)\n",
     "    \n",
-    "    # Extracted the text\n",
+    "    # Extracting the text\n",
     "    page = pdf_reader.pages[0]\n",
     "    extracted_text = page.extract_text()\n",
     "    \n",
-    "    # Print the extracted text\n",
+    "    # Printing the extracted text\n",
     "    ipca = extracted_text.split('IPCA')[1].split()[2:5] + extracted_text.split('IPCA')[1].split(')')[2].split()[4:6]\n",
     "\n",
     "    selic = extracted_text.split('Selic')[1].split()[2:5] + extracted_text.split('Selic')[1].split(')')[2].split()[4:6]\n",
@@ -203,12 +164,13 @@
     "    \n",
     "    cambio = extracted_text.split('Câmbio')[1].split()[1:4] + extracted_text.split('Câmbio')[1].split(')')[2].split()[4:6]\n",
     "    \n",
-    "    ## Compile into a df\n",
+    "    ## Compiling into a df\n",
     "    focus_data = pd.DataFrame({'IPCA': ipca, 'Selic': selic, 'PIB': pib, 'Câmbio': cambio}, index=[f'{curr_year}_4w',\n",
     "                                                                                                   f'{curr_year}_1w',\n",
     "                                                                                                   f'{curr_year}_0w',\n",
     "                                                                                                   f'{next_year}_1w',\n",
-    "                                                                                                   f'{next_year}_0w']).T"
+    "                                                                                                   f'{next_year}_0w']).T\n",
+    "# print(extracted_text)"
    ]
   },
   {
@@ -218,34 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(extracted_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f914521",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "focus_data"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "70f252ff",
-   "metadata": {},
-   "source": [
-    "focus_data.iloc[0, 2] = '3,75'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "300b665f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "## Getting the relevant data\n",
     "focus_data['2024_4w'] = [x.replace('▲', '') for x in focus_data['2024_4w']]\n",
     "focus_data['2024_1w'] = [x.replace('▲', '') for x in focus_data['2024_1w']]\n",
     "focus_data['2024_0w'] = [x.replace('▲', '') for x in focus_data['2024_0w']]\n",
@@ -264,7 +199,7 @@
    "id": "10021d09",
    "metadata": {},
    "source": [
-    "# 2. Manipulate Template"
+    "# 2. Generating a Image from a Template"
    ]
   },
   {
@@ -275,18 +210,17 @@
    "outputs": [],
    "source": [
     "def add_text_to_image(img, text, position, font_text='arial', font_size=29, text_color='blue'):\n",
-    "    ## Get color\n",
+    "    \n",
+    "    ## Getting the colors\n",
     "    colors = {'blue': '#183851', 'gold': '#CA9E67'}\n",
     "    \n",
     "    if text_color in colors.keys():\n",
     "        color = colors[text_color]\n",
     "    else:\n",
-    "        color = text_color\n",
-    "\n",
-    "    # Create a drawing context\n",
+    "        color = text_colort\n",
     "    draw = ImageDraw.Draw(img)\n",
     "\n",
-    "    # Set the font and color for the text\n",
+    "    # Setting the font and color for the text\n",
     "    font = ImageFont.truetype(font_text, font_size)\n",
     "    draw.text(position, text, fill=color, anchor=\"mm\", font=font)\n",
     "\n",
@@ -301,22 +235,22 @@
    "outputs": [],
    "source": [
     "def add_mov(img, idx, ref, position=(540, 960)):\n",
-    "    ## Separate Values\n",
+    "    ## Separating Values\n",
     "    value_0w = focus_data.at[idx, ref + '_0w']\n",
     "    value_1w = focus_data.at[idx, ref + '_1w']\n",
     "    \n",
-    "    # Open Movement Image\n",
+    "    # Opening Movement Image\n",
     "    if value_0w > value_1w:\n",
-    "        mov = Image.open(image_path + 'up.png')\n",
+    "        mov = Image.open(image_path + r'\\up.png')\n",
     "    elif value_0w < value_1w:\n",
-    "        mov = Image.open(image_path + 'down.png')\n",
+    "        mov = Image.open(image_path + r'\\down.png')\n",
     "    else:\n",
-    "        mov = Image.open(image_path + 'equal.png')\n",
+    "        mov = Image.open(image_path + r'\\equal.png')\n",
     "\n",
-    "    # Resize the Moreground Image\n",
+    "    # Resizing the foreground Image\n",
     "    mov = mov.resize(size=(32, 28))\n",
     "\n",
-    "    # Paste the foreground image onto the background image\n",
+    "    # Pasting the foreground image onto the background image\n",
     "    img.paste(mov, position)\n",
     "\n",
     "    return img"
@@ -329,8 +263,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Template\n",
-    "img = Image.open(image_path + 'template_focus_2024.png')\n",
+    "## Template path - modify accordingly\n",
+    "image_path = os.path.join(os.path.expanduser('~'), 'Documents')\n",
+    "img = Image.open(image_path + '\\Template_Focus.png')\n",
     "\n",
     "## Parameters\n",
     "font_date = 'C:/Windows/Fonts/arialbd.ttf'\n",
@@ -487,7 +422,7 @@
    "outputs": [],
    "source": [
     "img = img.convert(\"RGB\")\n",
-    "img.save(saving_path + r'\\Focus\\focus_' + last_friday + '.png')\n",
+    "img.save(os.path.join(os.path.expanduser('~'), 'Documents') + r'\\focus_' + last_friday + '.png')\n",
     "img"
    ]
   }
@@ -508,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
