--- a/Morning Calls.ipynb
+++ b/Morning Calls.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "from tqdm import tqdm\n",
     "from bs4 import BeautifulSoup\n",
-    "from datetime import datetime,\n",
+    "from datetime import datetime\n",
     "from newspaper import Article\n",
     "\n",
     "## OpenAI Data\n",
